versioned_docs/version-2.0.1/14-administration/11-version-control/01-concepts.md
---
title: 修改模式与发布模式
sidebar_label: 修改模式与发布模式
---

# 修改模式与发布模式

版本控制的核心是**修改模式**和**发布模式**的组合。管理员在
「管理控制台 → 版本控制 → 配置」页面中配置这两种模式，决定
用户如何提交变更以及系统如何发布新版本。

## 修改模式

修改模式决定了用户提交变更的流程。IDMP 提供三种模式：

### Version Track（版本追踪）

最简单的工作模式。所有用户共享 `main` 分支，修改直接提交到版本库。

- **适用场景**：仅需追踪变更历史，不需要审批流程
- **工作方式**：用户修改元数据 → Check-In → 直接写入 main 分支，生成新版本
- **特点**：无需创建分支、无需 MR/PR、无需等待审核

:::note 发布模式限制
Version Track 模式下，发布模式**只能选择「自动推送（Auto-Push）」**，「人工管理（Manual）」选项会被禁用。这是因为所有用户共享同一个运行分支，修改 Check-In 后即直接生效，没有「待发布」的中间状态可供管理员控制。
:::

:::tip 个人工作空间
Version Track 模式**不需要创建个人工作空间**，所有用户使用同一个 Git 仓库，共享同一份视图。
:::

### Review Required（审核必需）

修改必须通过 Merge Request / Pull Request 审核后才能合入。

- **适用场景**：需要审批流程，但不需要电子签名
- **工作方式**：用户修改元数据 → Check-In → 系统自动创建 MR/PR → Reviewer 审核 → 合并后生效
- **特点**：保护运行分支、支持 diff 审查、支持评论和打回

:::note 个人工作空间
Review Required 模式**需要为每位用户创建个人工作空间**。用户未审核的修改只存在于自己的个人分支与工作空间中，不会影响公共视图，也不会被其他用户看到。修改经过审核并合入主分支后才对全员可见。
:::

:::info 发布模式可选
Review Required 模式下，发布模式可以选择「自动推送」或「人工管理」。选择「自动推送」时，MR/PR 合并后立即发布；选择「人工管理」时，由管理员决定发布时间。
:::

### E-Signature（电子签名）

在 Review Required 的基础上增加 GPG 电子签名。

- **适用场景**：制药等强监管行业，需要满足 FDA 21 CFR Part 11 等合规要求
- **工作方式**：在 Review Required 流程基础上，每次提交自动附加 GPG 签名
- **特点**：最高安全级别、提交不可否认、满足电子签名法规

:::note 个人工作空间
E-Signature 模式同样**需要为每位用户创建个人工作空间**，是 Review Required 模式的进一步增强。
:::

:::warning GPG 密钥要求
E-Signature 模式下，每个提交都需要使用**用户自己的 GPG 密钥**进行签名。用户需先在「个人设置」中配置 GPG 密钥，否则无法完成 Check-In。详见 [GPG 密钥](../gpg-keys)。
:::

### 个人工作空间

在 **Review Required** 和 **E-Signature** 模式下，每个用户拥有独立的**个人工作空间**。
个人工作空间 = 独立的 Git 仓库 + 索引数据副本 + 数据库相关表副本，
确保用户未审核的修改不会影响公共视图，也不会被其他用户看到。

在 **Version Track** 模式下，所有用户共享同一个 Git 仓库，没有个人工作空间。

三种模式对比：

| 模式 | 个人工作空间 | 审核流程 | GPG 签名 |
|------|:----------:|:-------:|:-------:|
| Version Track | ❌ 不需要 | ❌ 无 | ❌ 无 |
| Review Required | ✅ 需要 | ✅ MR/PR 审核 | ❌ 无 |
| E-Signature | ✅ 需要 | ✅ MR/PR 审核 | ✅ 每个提交签名 |

详见 [个人工作空间](./03-personal-workspace.md)。

## 发布模式

发布模式决定合并后的新版本如何生效。

### 自动推送（Auto-Push）

合并成功后，系统自动更新运行系统。

- 变更合并到 main 分支后，IDMP 自动拉取最新版本
- 所有用户立即看到最新数据
- 适合大多数场景

:::warning Webhook 配置要求
修改合并到远程仓库主分支之后，立即发布到 IDMP 服务器作为新数据版本上线。您需要**在 Git 平台配置 IDMP 的 Webhook URL**，才能确保 IDMP 收到 PR/MR 合并的通知并触发自动发布。若未配置 Webhook，合并后 IDMP 将无法感知变更，数据版本不会自动更新。详见 [管理员配置](../admin-setup)。
:::

### 人工管理（Manual）

管理员决定何时发布哪个版本。

- 多个 MR/PR 可以累积后批量发布
- 管理员在「版本管理」页面选择版本并发布
- 适合需要严格控制发布时间窗口的场景

:::note 可用条件
「人工管理」仅在修改模式为 **Review Required** 或 **E-Signature** 时可选。Version Track 模式下该选项被禁用，只能使用「自动推送」。
:::

## 如何切换模式

1. 进入 **管理控制台 → 版本控制 → 配置**
2. 点击 **编辑** 按钮进入编辑模式
3. 在「修改模式」区域选择目标模式
4. 在「发布模式」区域选择目标模式
5. 点击 **保存**，输入管理员密码确认

:::warning
切换修改模式会立即影响所有用户的递交流程，请谨慎操作。
:::

## 模式组合

| 修改模式 | 发布模式 | 典型场景 |
|---------|---------|---------|
| Version Track | Auto-Push | 开发/测试环境，快速迭代 |
| Review Required | Auto-Push | 生产环境，需要审批但自动发布 |
| Review Required | Manual | 生产环境，需要审批且控制发布时间 |
| E-Signature | Auto-Push | 合规环境，电子签名 + 自动发布 |
| E-Signature | Manual | 合规环境，最高控制级别 |
